kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mpcb-backend
  namespace: mpcb
spec:
  selector:
    matchLabels:
      app: mpcb
  replicas: 1
  template:
    metadata:
      labels:
        app: mpcb
    spec:
      containers:
        - name: mpcb
          image: s11o/mpcb:0.0.1
          ports:
            - containerPort: 4000
